alignment issues in about fixed

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -11,9 +11,10 @@
     //padding-top:0 !important;
     //height:50vh;
     //padding-left:2.5%;
-    padding-right:4%;
+    //padding-right:4%;
     p {
         margin-left:3.5%;
+        margin-right:3.5%;
     }
 }
 
